# iot_server

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
iot_server/api/: admin.py  models.py  serializers.py  urls.py  views.py
iot_server/api/migrations/: 0001_initial.py  0002_alter_personalcomputer_options.py  0003_alter_personalcomputer_mac_address.py  0004_profile_personalcomputer_allowed_profiles.py
iot_server/iot_server/: asgi.py  settings.py  urls.py  wsgi.py
